syntax = "proto3";

package proto;

message FinishMsg {
  int32 gameId = 1;
}
